--- a/my-app/package.json
+++ b/my-app/package.json
@@ -29,6 +29,7 @@
     "date-fns": "^3.0.6",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
+    "firebase": "^10.7.1",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.301.0",
     "next": "14.0.4",
@@ -37,6 +38,7 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-icons": "^4.12.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "3.4.0",
     "tailwindcss-animate": "^1.0.7",
