--- a/my-app/package.json
+++ b/my-app/package.json
@@ -19,9 +19,11 @@
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@types/node": "20.10.5",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.18",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -43,6 +45,7 @@
     "tailwindcss": "3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3",
+    "uuid": "^9.0.1",
     "vaul": "^0.8.0",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
